--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
     height: 100vh;
 }
 .calcBody{
-    height: min(90vmin, 700px);
-    width: min(50vmin, 350px);
+    height: max(min(90vmin, 900px),600px);
+    width: max(min(45vmin, 450px),300px);
     border-radius: 3vmin;
     display: flex;
     flex-direction: column;
@@ -33,6 +33,9 @@ body{
     flex: 0 0 35%;
     display: flex;
     align-items: center;
+    padding: 5%;
+    padding-left: 0%;
+    padding-right: 0%;
 
 }
 .calcBody .screenContainer .screen{
@@ -48,10 +51,13 @@ body{
     margin-right: 5%;
     font-family: sans-serif;
     text-align: right;
-
+    padding: 1vmin;
+    padding-left: 2vmin;
+    padding-right: 2vmin;
+    font-size: 7vmin;
 }
 .calcBody .buttonContainer{
-    padding: 1vmin;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
