--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: white;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(230, 242, 255) 100%);
     box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 2px 2px rgba(0,0,0,0.12), 
               0 4px 4px rgba(0,0,0,0.12), 
@@ -39,7 +40,7 @@ body{
 
 }
 .calcBody .screenContainer .screen{
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(228, 228, 228, 0.41);
     box-shadow: 1px 1px 0px inset rgba(0,0,0,0.12),
                 2px 2px 1px inset rgba(0,0,0,0.12),
                 3px 3px 2px inset rgba(0,0,0,0.12),
@@ -76,16 +77,16 @@ body{
 button{
     background-color:rgba(135, 206, 250, 0.566);
     color: white;
-
     width: 50%;
     height: 100%;
     margin: 1%;
     padding: 0px;
-    border-radius: 6vmin;
+    border-radius: 20vmin;
     border: 0px;
     font-size: min(5vmin, 40px);
     box-shadow: 1px 1px 0px inset rgba(0,0,0,0.12);
 }
 button:active{
-    box-shadow: 2px solid black;
+    box-shadow: 0px 0px 5px inset rgba(0,0,0,0.33);
+    background-color: rgba(120, 200, 230, 0.777);
 }
