--- a/style.css
+++ b/style.css
@@ -15,67 +15,50 @@ body{
 .calcBody{
     height: max(min(75vmin, 900px),600px);
     width: max(min(50vmin, 600px),400px);
-    border-radius: 3vmin;
     display: flex;
     flex-direction: column;
-    background-color: white;
-    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(230, 242, 255) 100%);
-    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
-              0 2px 2px rgba(0,0,0,0.12), 
-              0 4px 4px rgba(0,0,0,0.12), 
-              0 8px 8px rgba(0,0,0,0.12),
-              0 16px 16px rgba(0,0,0,0.12);
 }
 .calcBody div{
     flex: 1;
-    border-radius: 20px;
 }
 .calcBody .screenContainer{
-    flex: 0 0 20%;
-    display: flex;
-    align-items: center;
-    padding: 5%;
-    padding-left: 0%;
-    padding-right: 0%;
-
+    flex: 0 0 25%;
+    padding: 1vmin;
+    padding-bottom: 0vmin;
 }
 .calcBody .screenContainer .screen{
-    background-color: rgba(228, 228, 228, 0.41);
+    background-color: rgba(228, 228, 228, 0.5);
     box-shadow: 1px 1px 0px inset rgba(0,0,0,0.12),
                 2px 2px 1px inset rgba(0,0,0,0.12),
                 3px 3px 2px inset rgba(0,0,0,0.12),
                 -1px -1px 0px inset rgba(0, 0, 0, 0.08);
-    height: 90%;
-    width: 90%;
-    margin-top: 3%;
-    margin-left: 5%;
-    margin-right: 5%;
+    height: 100%;
+    width: 100%;
     font-family: sans-serif;
     text-align: right;
     color: rgb(45, 45, 45);
-    padding: 1vmin;
-    padding-left: 2vmin;
-    padding-right: 2vmin;
-    font-size: 7vmin;
+    font-size: 8vmin;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .calcBody .buttonContainer{
-    padding: 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 2vmin;
+    padding: 1vmin;
 }
 .buttonContainer div{
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
 }
+
 .buttonContainer div .buttonEquals{
-    flex: 0 0 47.5%;
+    flex: 0 0 50%;
 }
 .buttonContainer div .buttonClear{
-    flex: 0 0 47.5%;
+    flex: 0 0 50%;
     background-color: pink;
 }
 
@@ -85,15 +68,14 @@ body{
 }
 
 button{
+    flex: 1;
     background-color:rgba(135, 206, 250, 0.566);
     color: white;
-    width: 50%;
     height: 100%;
-    margin: 1%;
     padding: 0px;
-    border-radius: 20vmin;
     border: 0px;
     font-size: min(5vmin, 40px);
+    font-weight: bolder;
     box-shadow: 1px 1px 0px inset rgba(0,0,0,0.12);
 }
 button:active{
