--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
 }
 .calcBody .screenContainer .screen{
 
-    height: 70%;
+    height: 80%;
     width: 99%;
     text-align: right;
     color: rgb(61, 61, 61);
@@ -68,8 +68,8 @@ body{
 }
 .buttonContainer div .buttonClear{
     flex: 0 0 50%;
-    background-color: rgba(255, 192, 203, 0.459);
-    box-shadow: 1px 1px 0px inset rgba(0,0,0,0.12);
+    background-color: rgba(255, 192, 203, 0.459); 
+
 }
 
 .buttonContainer div .buttonClear:active{
@@ -79,14 +79,18 @@ body{
 
 button{
     flex: 1;
-    background-color: rgba(255, 255, 255, 0.194);
-    color: rgba(0, 0, 0, 0.445);
+    background-color: rgba(255, 255, 255, 0.15);
+    color: rgba(0, 0, 0, 0.55);
     height: 100%;
     padding: 0px;
     border: 0px;
     font-size: 5em;
     font-weight: bolder;
     box-shadow: 1px 1px 0px inset rgba(0,0,0,0.12);
+
+}
+button:hover{
+    color: rgba(0, 0, 0, .75);
 }
 button:active{
     box-shadow: 0px 0px 5px inset rgba(0,0,0,0.33);
